--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="CSS/estilo.css">
 
     <script src="javascript/personajes.js"></script>
+    <script src="javascript/pnj.js"></script>
 
     <link rel="icon" type="image/x-icon" href="media/favicon.ico">
 
@@ -89,7 +90,9 @@
 
       <!-- pj conocidos -->
     <div hidden class="fondo3 fondo" id="link7e">
-      
+      <div class="contenedorAncho flex">
+
+      </div>
     </div>
 
     <!-- aventureros -->
@@ -122,6 +125,5 @@
 </body>
 
     <script src="javascript/alternativo.js"></script>
-    <script src="javascript/personajes.js"></script>
     
 </html>
