--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
-                <a class="vinculo nav-link draconis" aria-current="page" id="link1" href="#Información">Historia</a>
+                <a class="vinculo nav-link draconis" aria-current="page" id="link1" href="#Información">HISTORIA</a>
               </li>
 
               <li class="nav-item">
-                <a class="vinculo nav-link draconis" aria-current="page" id="link7" href="#Información">Personajes conocidos</a>
+                <a class="vinculo nav-link draconis" aria-current="page" id="link7" href="#Información">PERSONAJES CONOCIDOS</a>
               </li>
 
 
               <li class="nav-item">
-                <a class="vinculo nav-link draconis" id="link2" href="#Aventureros">Aventureros</a>
+                <a class="vinculo nav-link draconis" id="link2" href="#Aventureros">AVENTUREROS</a>
               </li>
 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle draconis" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Utilidades
+                  UTILIDADES
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="vinculo draconis dropdown-item" id="link3" href="#Downtime">Downtime</a></li>
-                  <li><a class="vinculo draconis dropdown-item" id="link4" href="#Herramientas">Herramientas</a></li>
-                  <li><a class="vinculo draconis dropdown-item" id="link5" href="#Macros">Macros</a></li>
-                  <li><a class="vinculo draconis dropdown-item" id="link6" href="#Objetos">Objetos</a></li>
+                  <li><a class="vinculo draconis dropdown-item" id="link3" href="#Downtime">DOWNTIME</a></li>
+                  <li><a class="vinculo draconis dropdown-item" id="link4" href="#Herramientas">HERRAMIENTAS</a></li>
+                  <li><a class="vinculo draconis dropdown-item" id="link5" href="#Macros">MACROS</a></li>
+                  <li><a class="vinculo draconis dropdown-item" id="link6" href="#Objetos">OBJETOS</a></li>
                 </ul>
               </li>
             </ul>
