--- a/index.html
+++ b/index.html
@@ -23,29 +23,31 @@
 
     
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="vinculo navbar-brand draconis" id="link0" href="#Main">Liga de Aventureros</a>
+    <nav class="navbar navbar-dark navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid align-items-center">
+          <a class="vinculo navbar-brand draconis" id="link0" href="#Main">
+            <img src="media/Capa_202.png" alt="">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <div class="collapse navbar-collapse ms-5" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
 
               <li class="nav-item">
-                <a class="vinculo nav-link draconis" aria-current="page" id="link1" href="#Información">HISTORIA</a>
+                <a class="vinculo nav-link draconis ms-3" aria-current="page" id="link1" href="#Información">HISTORIA</a>
               </li>
 
-              <li class="nav-item">
-                <a class="vinculo nav-link draconis" aria-current="page" id="link7" href="#Información">PERSONAJES CONOCIDOS</a>
+              <li class="nav-item ms-3">
+                <a class="vinculo nav-link draconis" aria-current="page" id="link7" href="#Información">PERSONALIDADES CONOCIDAS</a>
               </li>
 
 
-              <li class="nav-item">
+              <li class="nav-item ms-3">
                 <a class="vinculo nav-link draconis" id="link2" href="#Aventureros">AVENTUREROS</a>
               </li>
 
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown ms-3">
                 <a class="nav-link dropdown-toggle draconis" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   UTILIDADES
                 </a>
@@ -73,25 +75,38 @@
 
     <!-- Información -->
     <div hidden class="fondo2 fondo" id="link1e">
-        <div class=" card m-3 w-75">
+        <div class=" card m-3 w-75 bajoBarra">
           <h1 class="draconis text-center titulo_carta">UN NUEVO COMIENZO</h1>
           <P class="parrafo_carta p-2">
-            En una época de caos y peligro, la costa de la espada estaba plagada de criaturas monstruosas, hechiceros malvados y conflictos sin fin entre reinos. En medio de esta oscuridad, surgió la Liga de Aventureros, un grupo de valientes guerreros y astutos magos que se unieron para hacer frente a estas amenazas y proteger a los habitantes de la costa de la espada. <br><br>
-  
-            Con el tiempo, estos héroes legendarios comprendieron que para erradicar el caos de una vez por todas, era necesario abordar las raíces de los problemas que afectaban la costa de la espada. En su búsqueda, encontraron artefactos mágicos y conocimientos antiguos que arrojaron luz sobre la verdadera naturaleza del caos en el mundo.<br><br>
-  
-            La Liga comenzó a promover la cooperación y la unión entre los reinos y pueblos de la costa de la espada. Ayudaron a establecer rutas comerciales seguras, fortalecieron las defensas de los reinos vulnerables y enseñaron a las personas a protegerse y defenderse. Con el tiempo, sus logros comenzaron a dar frutos y un período de paz inédito se adueñó de las tierras.<br><br>
-  
-            Pero como todo lo bueno, no duró para siempre. Una sombra ha empezado a crecer en los lugares más insospechados de la Costa de la Espada. Aventureros experimentados han empezado a desaparecer sin dejar rastro y se conoció la completa aniquilación de un pueblo cercano. Los altos mandos de Baldur's Gate buscaron a la persona más capacitada que conocían para llevar a cabo esa empresa. ¿Será suficiente para detener esta nueva amenaza? Solo el tiempo lo dirá.
-    
+            El caos y el peligro reinaban en cada rincón de la Costa de la Espada. Tierras plagadas de criaturas monstruosas, malvados hechiceros y conflictos interminables entre reinos. Para hacer frente a estas amenazas y proteger a los habitantes, surgió la Liga de Aventureros en tiempos oscuros. Pero con el tiempo, algo cambió. <br> <br>
+
+            De entre los miembros de la Liga, emergió una generación de héroes valientes y astutos. Unidos por una firme determinación, se propusieron cambiar el destino de la Costa de la Espada y restaurar el equilibrio. Comprendieron que debían abordar las raíces de los problemas en lugar de enfrentarse a las consecuencias una y otra vez.<br> <br>
+
+            En su búsqueda, estos legendarios aventureros encontraron artefactos mágicos y conocimientos antiguos que arrojaron luz sobre la verdadera naturaleza del caos. Optaron por cambiar su enfoque y trabajar en el corazón de los problemas en lugar de luchar ciegamente.<br> <br>
+
+            Así, la Liga de Aventureros comenzó a fomentar la cooperación y la unión entre los reinos y pueblos de la Costa de la Espada. En lugar de guerras y conflictos, promovieron la diplomacia y el diálogo para resolver disputas y diferencias. Ayudaron a establecer rutas comerciales seguras y fortalecieron las defensas de los reinos vulnerables. También enseñaron a las personas a protegerse y defenderse, capacitándolas en el arte de la autodefensa.<br> <br>
+
+            Con el tiempo, los logros de la Liga dieron frutos. La unión y cooperación entre los reinos llevaron a un período de paz inédito en la Costa de la Espada. Las criaturas monstruosas se retiraron a áreas más remotas, y los hechiceros oscuros se volvieron menos audaces. La confianza y el entendimiento entre los habitantes crecieron, y las viejas rivalidades cedieron ante una visión compartida de un mundo más próspero y armonioso.<br> <br>
+
+            No obstante, como ocurre en muchas ocasiones, la paz no duró para siempre. Una sombra misteriosa ha comenzado a crecer en lugares insospechados de la Costa de la Espada. Sin valientes guerreros para enfrentarla, ha crecido y afianzado sus raíces durante años.<br> <br>
+
+            Los habitantes, que apenas empezaban a disfrutar de su vida pacífica, se ven amenazados nuevamente por extraños sucesos. Aventureros experimentados, algunos famosos, han desaparecido sin dejar rastro. Además, un pueblo cercano ha sido completamente aniquilado en un día.<br> <br>
+
+            La incertidumbre y el miedo se extienden como un fuego incontrolable por la Costa de la Espada, afectando a sus habitantes. Ante esta creciente amenaza, los altos mandos de Baldur's Gate deciden buscar ayuda y contactan a Jolene Batleborn, la antigua líder de la Liga de Aventureros, ahora clériga de Pelor.<br> <br>
+
+            Sintiendo que no puede enfrentar esta oscuridad sola, Jolene se pone en contacto con Dairan, un hábil y astuto mago con quien ha compartido innumerables retos en el pasado. Ambos deciden fundar una nueva Liga de Aventureros, una generación de valientes y nobles de corazón dispuestos a defender y restaurar la paz en la Costa de la Espada.<br> <br>
+
+            Su objetivo es orientar y guiar a los nuevos aventureros que se convertirán en el bastión y primera línea de defensa contra cualquier amenaza. Un grupo de guerreros dispuestos a arriesgar sus vidas para proteger a los indefensos y mantener la paz en la región.
           </P>
         </div>
     </div>
 
       <!-- pj conocidos -->
     <div hidden class="fondo3 fondo" id="link7e">
-      <div class="contenedorAncho flex">
+      <div class="bajoBarra">
+        <div class="contenedorAncho flex">
 
+        </div>
       </div>
     </div>
 
