--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 
       <!-- pj conocidos -->
-      <div class="fondo3 fondo "  id="link7e">
+      <div hidden class="fondo3 fondo "  id="link7e">
         
         <!-- DIV PARA PC -->
         <div class="bajoBarra d-flex flex-column pantallaGrande" id="contenedorPC">
