--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         </div>
     </div>
 
-      <!-- pj conocidos -->
-      <div hidden class="fondo3 fondo "  id="link7e">
+    <!-- pj conocidos -->
+    <div hidden class="fondo3 fondo"  id="link7e">
         
         <!-- DIV PARA PC -->
         <div class="bajoBarra d-flex flex-column pantallaGrande" id="contenedorPC">
@@ -112,14 +112,16 @@
         <div class="bajoBarra movil d-flex flex-column" id="contenedorMovil">
         </div>
 
-      </div>
+    </div>
       
 
     <!-- aventureros -->
-    <div hidden id="link2e">
-      <div class="accordion m-3" id="desplegables">
-
+    <div hidden class="fondo4 fondo"  id="link2e">
+      <div class="bajoBarra d-flex flex-column divPjs">
+        <div class="accordion" id="desplegables">
+        </div>
       </div>
+
     </div>
 
     <!-- downtime -->
