--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <script src="javascript/personajes.js"></script>
     <script src="javascript/pnj.js"></script>
 
-    <link rel="icon" type="image/x-icon" href="media/favicon.ico">
+    <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="media/favicon.ico" type="image/x-icon"></head>
 
-</head>
 <body>
 
     
