--- a/index.html
+++ b/index.html
@@ -128,18 +128,18 @@
     </div>
 
   <!-- CALCULAR CA -->
-  <div hidden class="fondo5 fondo" id="link4e">
+  <div hidden class="fondo5 fondo caCalc" id="link4e">
     <div class="bajoBarra d-flex flex-column align-items-center w-100 p-3">
         <!-- inputs -->
         <div class="w-75 p-4 cuadradoBlanco" >
             <h2 class="draconis text-center titulo_carta">
-                INPUTS
+                BUILD
             </h2>
             <!-- Stats -->
             <div>
-                <h2 class="draconis titulo_carta">
+                <!-- <h2 class="draconis titulo_carta">
                     STATS
-                </h2>
+                </h2> -->
                 <div class="container mt-4">
                     <h4>Modificador de característica</h4>
                     <div class="row justify-content-around mt-4">
