--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="vinculo draconis dropdown-item" id="link3" href="#Downtime">DOWNTIME</a></li>
-                  <li><a class="vinculo draconis dropdown-item" id="link4" href="#Herramientas">CALCULADOR DE CA</a></li>
+                  <li><a class="vinculo draconis dropdown-item" id="link4" href="#Herramientas">CALCULADORA DE CA</a></li>
                   <li><a class="vinculo draconis dropdown-item" id="link5" href="#Macros">MACROS</a></li>
                   <li><a class="vinculo draconis dropdown-item" id="link6" href="#Objetos">OBJETOS</a></li>
                 </ul>
