--- a/index.html
+++ b/index.html
@@ -141,21 +141,21 @@
                     STATS
                 </h2> -->
                 <div class="container mt-4">
-                    <h4>Modificador de característica</h4>
+                    <h3>Modificador de característica</h3>
                     <div class="row justify-content-around mt-4">
-                        <div class="col-md-2">
+                        <div class="col-md-2 text-center">
                             <label for="dex">DESTREZA</label>
                             <input type="number" id="mod-dex" class="form-control" value="0">
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-2 text-center" >
                             <label for="con">CONSTITUCIÓN</label>
                             <input type="number" id="mod-con" class="form-control" value="0">
                         </div>      
-                        <div class="col-md-2">
+                        <div class="col-md-2 text-center">
                             <label for="wis">SABIDURIA</label>
                             <input type="number" id="mod-wis" class="form-control" value="0">
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-2 text-center">
                             <label for="int">INTELIGENCIA</label>
                             <input type="number" id="mod-int" class="form-control" value="0">
                         </div>
@@ -164,7 +164,7 @@
             </div>
             <!-- Bonificaciones -->
             <div class="container mt-5">
-                <h4>Bonificaciones</h4>
+                <h3>Bonificaciones</h3>
                 <div class="d-flex flex-wrap justify-content-evenly text-center mt-4" id="modificadores">
                     <div class="col-md-3">
                         <label for="armor-magic">Armadura mágica</label>
